--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:title" content="Berathsaran G P - Portfolio" />
     <meta property="og:description" content="Front-End Developer | Cloud deployment|. Building responsive web apps, serverless architectures & data-driven dashboards." />
     <meta property="og:type" content="website" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
